# vlm-follow-up-eval

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
examples/human_ref/: human_ref.jsonl
examples/vlm_generated/: model_a.jsonl  model_b.jsonl  model_c.jsonl
src/vlm_follow_up_eval/: elo.py  judge.py  main.py
src/vlm_follow_up_eval/prompts/: pairwise.py
