[project]
name = "vlm-follow-up-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "youkwan", email = "144937481+youkwan@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pyright[nodejs]>=1.1.407",
    "pytest>=8.4.2",
    "ruff>=0.14.4",
]

[project.scripts]
llm-judge = "vlm_follow_up_eval.main:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.pyright]
typeCheckingMode = "standard"
include = [
    "src/*",
]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "ASYNC", "UP"]

[tool.rumdl]
disable = ["MD013"]
include = ["docs/*.md", "README.md"]
exclude = [".git", "node_modules"]
ignore-gitignore = false

[tool.rumdl.MD044]
names = ["rumdl", "Markdown", "GitHub", "JavaScript", "Node.js", "TypeScript"]